--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             text-align: center;
 
         }
+
+        .players-section {
+            background-color: #151515;
+        }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,14 +38,14 @@
 </head>
 
 <body>
-    <header>
+    <header class="">
         <div class="grid grid-cols-5 bg-black">
             <div class="">
                 <img class="" src="img/mbappe-header.png" alt="mbappe-image">
             </div>
             <div class="col-span-3 mx-6 flex justify-center items-center">
                 <div>
-                    <h1 class="site-title mb-6">Select Your Best Five</h1>
+                    <h1 class="site-title mb-7 mt-0">Select Your Best Five</h1>
                     <p class="site-description px-14">Dive into the world of sports and construct your dream team. Our
                         platform allows you to meticulously choose the top 5 players across different eras, putting your
                         sports knowledge to the ultimate test. Compete against friends, rivals, or AI opponents to prove
@@ -54,6 +58,180 @@
 
         </div>
     </header>
+    <main>
+        <section class="players-section w-full">
+            <div class="flex w-5/6 mx-auto py-16">
+                <div class="grid grid-cols-3 gap-6 w-3/4 me-6">
+                    <div class="border border-gray-500 bg-black h-96">
+                        <img class="h-1/2 w-full" src="img/R.jpg" alt="">
+                        <div class="flex justify-center">
+                            <div class="w-5/6">
+                                <h3 class="text-2xl font-bold my-4 text-white text-center">Lionel Messi</h3>
+                                <p class="text-center text-gray-400 mb-2">735 Goals ◆ 355 Assists</p>
+                                <div class="flex justify-center my-7">
+                                    <button
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border border-gray-500 bg-black h-96">
+                        <img class="h-1/2 w-full" src="img/ronaldo.jpg" alt="">
+                        <div class="flex justify-center">
+                            <div class="w-5/6">
+                                <h3 class="text-2xl font-bold my-4 text-white text-center">Cristiano Ronaldo</h3>
+                                <p class="text-center text-gray-400 mb-2">759 Goals ◆ 238 Assists</p>
+                                <div class="flex justify-center my-7">
+                                    <button
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border border-gray-500 bg-black h-96">
+                        <img class="h-1/2 w-full" src="img/lewandowski.jpg" alt="">
+                        <div class="flex justify-center">
+                            <div class="w-5/6">
+                                <h3 class="text-2xl font-bold my-4 text-white text-center">Robert Lewandowski</h3>
+                                <p class="text-center text-gray-400 mb-2">568 Goals ◆ 153 Assists</p>
+                                <div class="flex justify-center my-7">
+                                    <button
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border border-gray-500 bg-black h-96">
+                        <img class="h-1/2 w-full" src="img/KDB.jpg" alt="">
+                        <div class="flex justify-center">
+                            <div class="w-5/6">
+                                <h3 class="text-2xl font-bold my-4 text-white text-center">Kevin De Bruyne</h3>
+                                <p class="text-center text-gray-400 mb-2">149 Goals ◆ 254 Assists</p>
+                                <div class="flex justify-center my-7">
+                                    <button
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border border-gray-500 bg-black h-96">
+                        <img class="h-1/2 w-full" src="img/neymar.jpg" alt="">
+                        <div class="flex justify-center">
+                            <div class="w-5/6">
+                                <h3 class="text-2xl font-bold my-4 text-white text-center">Neymar</h3>
+                                <p class="text-center text-gray-400 mb-2">360 Goals ◆ 221 Assists</p>
+                                <div class="flex justify-center my-7">
+                                    <button
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border border-gray-500 bg-black h-96">
+                        <img class="h-1/2 w-full" src="img/kane.jpg" alt="Harry Kane">
+                        <div class="flex justify-center">
+                            <div class="w-5/6">
+                                <h3 class="text-2xl font-bold my-4 text-white text-center">Harry Kane</h3>
+                                <p class="text-center text-gray-400 mb-2">351 Goals ◆ 89 Assists</p>
+                                <div class="flex justify-center my-7">
+                                    <button
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border border-gray-500 bg-black h-96">
+                        <img class="h-1/2 w-full" src="img/mbappe.jpg" alt="">
+                        <div class="flex justify-center">
+                            <div class="w-5/6">
+                                <h3 class="text-2xl font-bold my-4 text-white text-center">Kylian Mbappe</h3>
+                                <p class="text-center text-gray-400 mb-2">288 Goals ◆ 126 Assists</p>
+                                <div class="flex justify-center my-7">
+                                    <button
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border border-gray-500 bg-black h-96">
+                        <img class="h-1/2 w-full" src="img/haaland.jpg" alt="">
+                        <div class="flex justify-center">
+                            <div class="w-5/6">
+                                <h3 class="text-2xl font-bold my-4 text-white text-center">Erling Haaland</h3>
+                                <p class="text-center text-gray-400 mb-2">225 Goals ◆ 51 Assists</p>
+                                <div class="flex justify-center my-7">
+                                    <button
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border border-gray-500 bg-black h-96">
+                        <img class="h-1/2 w-full" src="img/vinicius.jpg" alt="">
+                        <div class="flex justify-center">
+                            <div class="w-5/6">
+                                <h3 class="text-2xl font-bold my-4 text-white text-center">Vinicius Junior</h3>
+                                <p class="text-center text-gray-400 mb-2">101 Goals ◆ 81 Assists</p>
+                                <div class="flex justify-center my-7">
+                                    <button
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border border-gray-500 bg-black h-96">
+                        <img class="h-1/2 w-full" src="img/bellingham.jpg" alt="">
+                        <div class="flex justify-center">
+                            <div class="w-5/6">
+                                <h3 class="text-2xl font-bold my-4 text-white text-center">Jude Bellingham</h3>
+                                <p class="text-center text-gray-400 mb-2">51 Goals ◆ 40 Assists</p>
+                                <div class="flex justify-center my-7">
+                                    <button
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border border-gray-500 bg-black h-96">
+                        <img class="h-1/2 w-full" src="img/foden.jpg" alt="">
+                        <div class="flex justify-center">
+                            <div class="w-5/6">
+                                <h3 class="text-2xl font-bold my-4 text-white text-center">Phil Foden</h3>
+                                <p class="text-center text-gray-400 mb-2">108 Goals ◆ 66 Assists</p>
+                                <div class="flex justify-center my-7">
+                                    <button
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border border-gray-500 bg-black h-96">
+                        <img class="h-1/2 w-full" src="img/saka.jpg" alt="">
+                        <div class="flex justify-center">
+                            <div class="w-5/6">
+                                <h3 class="text-2xl font-bold my-4 text-white text-center">Bukayo Saka</h3>
+                                <p class="text-center text-gray-400 mb-2">80 Goals ◆ 70 Assists</p>
+                                <div class="flex justify-center my-7">
+                                    <button
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="w-1/4">
+                    <div class="bg-black h-96">
+                        <h3 class="text-3xl text-center py-5 text-white mb-7">Selected-V</h3>
+                        <ol class="text-white list-inside list-decimal text-center">
+
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="js/best.js"></script>
 </body>
 
