--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         .players-section {
             background-color: #151515;
         }
+
+        footer {
+            background-color: #151515;
+        }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,7 +58,7 @@
                         as the ultimate sports fan?</p>
                 </div>
             </div>
-            <div class=""><img src="img/tenas.png" alt="ronaldo-image"></div>
+            <div class=""><img src="img/tenas.png" alt="tenas-image"></div>
 
         </div>
     </header>
@@ -63,175 +67,217 @@
             <div class="flex w-5/6 mx-auto py-16">
                 <div class="grid grid-cols-3 gap-6 w-3/4 me-6">
                     <div class="border border-gray-500 bg-black h-96">
-                        <img class="h-1/2 w-full" src="img/R.jpg" alt="">
+                        <img class="h-52 w-full" src="img/messi.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
-                                <h3 class="text-2xl font-bold my-4 text-white text-center">Lionel Messi</h3>
+                                <h3 class="text-2xl font-bold my-3 text-white text-center">Lionel Messi</h3>
                                 <p class="text-center text-gray-400 mb-2">735 Goals ◆ 355 Assists</p>
-                                <div class="flex justify-center my-7">
+                                <div class="flex justify-center mt-5">
                                     <button
-                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="border border-gray-500 bg-black h-96">
-                        <img class="h-1/2 w-full" src="img/ronaldo.jpg" alt="">
+                        <img class="h-52 w-full" src="img/ronaldo.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
-                                <h3 class="text-2xl font-bold my-4 text-white text-center">Cristiano Ronaldo</h3>
+                                <h3 class="text-2xl font-bold my-3 text-white text-center">Cristiano Ronaldo</h3>
                                 <p class="text-center text-gray-400 mb-2">759 Goals ◆ 238 Assists</p>
-                                <div class="flex justify-center my-7">
+                                <div class="flex justify-center mt-5">
                                     <button
-                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="border border-gray-500 bg-black h-96">
-                        <img class="h-1/2 w-full" src="img/lewandowski.jpg" alt="">
+                        <img class="h-52 w-full" src="img/Lewandowski.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
-                                <h3 class="text-2xl font-bold my-4 text-white text-center">Robert Lewandowski</h3>
+                                <h3 class="text-2xl font-bold my-3 text-white text-center">Lewandowski</h3>
                                 <p class="text-center text-gray-400 mb-2">568 Goals ◆ 153 Assists</p>
-                                <div class="flex justify-center my-7">
+                                <div class="flex justify-center mt-5">
                                     <button
-                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="border border-gray-500 bg-black h-96">
-                        <img class="h-1/2 w-full" src="img/KDB.jpg" alt="">
+                        <img class="h-52 w-full" src="img/KDB.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
-                                <h3 class="text-2xl font-bold my-4 text-white text-center">Kevin De Bruyne</h3>
+                                <h3 class="text-2xl font-bold my-3 text-white text-center">Kevin De Bruyne</h3>
                                 <p class="text-center text-gray-400 mb-2">149 Goals ◆ 254 Assists</p>
-                                <div class="flex justify-center my-7">
+                                <div class="flex justify-center mt-5">
                                     <button
-                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="border border-gray-500 bg-black h-96">
-                        <img class="h-1/2 w-full" src="img/neymar.jpg" alt="">
+                        <img class="h-52 w-full" src="img/neymar.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
-                                <h3 class="text-2xl font-bold my-4 text-white text-center">Neymar</h3>
+                                <h3 class="text-2xl font-bold my-3 text-white text-center">Neymar</h3>
                                 <p class="text-center text-gray-400 mb-2">360 Goals ◆ 221 Assists</p>
-                                <div class="flex justify-center my-7">
+                                <div class="flex justify-center mt-5">
                                     <button
-                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="border border-gray-500 bg-black h-96">
-                        <img class="h-1/2 w-full" src="img/kane.jpg" alt="Harry Kane">
+                        <img class="h-52 w-full" src="img/kane.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
-                                <h3 class="text-2xl font-bold my-4 text-white text-center">Harry Kane</h3>
+                                <h3 class="text-2xl font-bold my-3 text-white text-center">Harry Kane</h3>
                                 <p class="text-center text-gray-400 mb-2">351 Goals ◆ 89 Assists</p>
-                                <div class="flex justify-center my-7">
+                                <div class="flex justify-center mt-5">
                                     <button
-                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="border border-gray-500 bg-black h-96">
-                        <img class="h-1/2 w-full" src="img/mbappe.jpg" alt="">
+                        <img class="h-52 w-full" src="img/mbappe.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
-                                <h3 class="text-2xl font-bold my-4 text-white text-center">Kylian Mbappe</h3>
+                                <h3 class="text-2xl font-bold my-3 text-white text-center">Kylian Mbappe</h3>
                                 <p class="text-center text-gray-400 mb-2">288 Goals ◆ 126 Assists</p>
-                                <div class="flex justify-center my-7">
+                                <div class="flex justify-center mt-5">
                                     <button
-                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="border border-gray-500 bg-black h-96">
-                        <img class="h-1/2 w-full" src="img/haaland.jpg" alt="">
+                        <img class="h-52 w-full" src="img/Haaland.png" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
-                                <h3 class="text-2xl font-bold my-4 text-white text-center">Erling Haaland</h3>
+                                <h3 class="text-2xl font-bold my-3 text-white text-center">Erling Haaland</h3>
                                 <p class="text-center text-gray-400 mb-2">225 Goals ◆ 51 Assists</p>
-                                <div class="flex justify-center my-7">
+                                <div class="flex justify-center mt-5">
                                     <button
-                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="border border-gray-500 bg-black h-96">
-                        <img class="h-1/2 w-full" src="img/vinicius.jpg" alt="">
+                        <img class="h-52 w-full" src="img/vinicius.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
-                                <h3 class="text-2xl font-bold my-4 text-white text-center">Vinicius Junior</h3>
+                                <h3 class="text-2xl font-bold my-3 text-white text-center">Vinicius Junior</h3>
                                 <p class="text-center text-gray-400 mb-2">101 Goals ◆ 81 Assists</p>
-                                <div class="flex justify-center my-7">
+                                <div class="flex justify-center mt-5">
                                     <button
-                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="border border-gray-500 bg-black h-96">
-                        <img class="h-1/2 w-full" src="img/bellingham.jpg" alt="">
+                        <img class="h-52 w-full" src="img/bellingham.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
-                                <h3 class="text-2xl font-bold my-4 text-white text-center">Jude Bellingham</h3>
+                                <h3 class="text-2xl font-bold my-3 text-white text-center">Jude Bellingham</h3>
                                 <p class="text-center text-gray-400 mb-2">51 Goals ◆ 40 Assists</p>
-                                <div class="flex justify-center my-7">
+                                <div class="flex justify-center mt-5">
                                     <button
-                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="border border-gray-500 bg-black h-96">
-                        <img class="h-1/2 w-full" src="img/foden.jpg" alt="">
+                        <img class="h-52 w-full" src="img/foden.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
-                                <h3 class="text-2xl font-bold my-4 text-white text-center">Phil Foden</h3>
+                                <h3 class="text-2xl font-bold my-3 text-white text-center">Phil Foden</h3>
                                 <p class="text-center text-gray-400 mb-2">108 Goals ◆ 66 Assists</p>
-                                <div class="flex justify-center my-7">
+                                <div class="flex justify-center mt-5">
                                     <button
-                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="border border-gray-500 bg-black h-96">
-                        <img class="h-1/2 w-full" src="img/saka.jpg" alt="">
+                        <img class="h-52 w-full" src="img/saka.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
-                                <h3 class="text-2xl font-bold my-4 text-white text-center">Bukayo Saka</h3>
+                                <h3 class="text-2xl font-bold my-3 text-white text-center">Bukayo Saka</h3>
                                 <p class="text-center text-gray-400 mb-2">80 Goals ◆ 70 Assists</p>
-                                <div class="flex justify-center my-7">
+                                <div class="flex justify-center mt-5">
                                     <button
-                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-2">SELECT</button>
+                                        class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
+
 
 
                 </div>
                 <div class="w-1/4">
-                    <div class="bg-black h-96">
-                        <h3 class="text-3xl text-center py-5 text-white mb-7">Selected-V</h3>
+                    <div class="bg-black h-96 py-5 mb-6">
+                        <h3 class="text-3xl font-medium text-center py-5 text-white mb-7">Selected-V</h3>
                         <ol class="text-white list-inside list-decimal text-center">
 
                         </ol>
                     </div>
+                    <div class="bg-black px-12 py-5">
+                        <h3 class="text-3xl font-medium text-center py-5 text-white mb-7">Budget</h3>
+                        <div class="flex justify-between items-center mb-7">
+                            <p class="text-xl text-gray-400">Per Player</p>
+                            <input class="border-2 border-white bg-black w-1/2 text-white p-2" type="text" name=""
+                                id="">
+                        </div>
+                        <div class="mb-7">
+                            <button
+                                class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">Calculate</button>
+                        </div>
+                        <div class="flex justify-between items-center text-xl mb-4">
+                            <p class="text-gray-400">Player Expenses</p>
+                            <p class="text-white">$<span>0000</span></p>
+                        </div>
+                        <div class="flex  justify-between items-center mb-4">
+                            <p class="text-xl text-gray-400">Manager</p>
+                            <input class="border-2 border-white bg-black w-1/2 text-white p-2" type="text" name=""
+                                id="">
+                        </div>
+                        <div class="flex  justify-between items-center mb-7">
+                            <p class="text-xl text-gray-400">Coach</p>
+                            <input class="border-2 border-white bg-black w-1/2 text-white p-2" type="text" name=""
+                                id="">
+                        </div>
+                        <div class="mb-7">
+                            <button
+                                class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">Calculate
+                                Total</button>
+                        </div>
+                        <div class="flex justify-between items-center text-gray-400 text-xl mb-4">
+                            <p class="font-semibold">Total</p>
+                            <p class="text-orange-600 font-semibold">$<span>0000</span></p>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </section>
+        <hr class="border-1 border-gray-500">
+        <footer class="flex justify-center items-center h-32">
+            <p class="text-white text-xl font-normal">Copyright @ 2022 All Rights Reserved</p>
+        </footer>
     </main>
+    <script src="js/tailwind.config.js"></script>
     <script src="js/best.js"></script>
 </body>
 
