Worded with Selected-V Portion

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Lionel Messi</h3>
                                 <p class="text-center text-gray-400 mb-2">735 Goals ◆ 355 Assists</p>
                                 <div class="flex justify-center mt-5">
-                                    <button
+                                    <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
@@ -86,7 +86,7 @@
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Cristiano Ronaldo</h3>
                                 <p class="text-center text-gray-400 mb-2">759 Goals ◆ 238 Assists</p>
                                 <div class="flex justify-center mt-5">
-                                    <button
+                                    <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
@@ -99,7 +99,7 @@
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Lewandowski</h3>
                                 <p class="text-center text-gray-400 mb-2">568 Goals ◆ 153 Assists</p>
                                 <div class="flex justify-center mt-5">
-                                    <button
+                                    <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
@@ -112,7 +112,7 @@
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Kevin De Bruyne</h3>
                                 <p class="text-center text-gray-400 mb-2">149 Goals ◆ 254 Assists</p>
                                 <div class="flex justify-center mt-5">
-                                    <button
+                                    <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
@@ -125,7 +125,7 @@
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Neymar</h3>
                                 <p class="text-center text-gray-400 mb-2">360 Goals ◆ 221 Assists</p>
                                 <div class="flex justify-center mt-5">
-                                    <button
+                                    <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
@@ -138,7 +138,7 @@
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Harry Kane</h3>
                                 <p class="text-center text-gray-400 mb-2">351 Goals ◆ 89 Assists</p>
                                 <div class="flex justify-center mt-5">
-                                    <button
+                                    <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
@@ -151,7 +151,7 @@
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Kylian Mbappe</h3>
                                 <p class="text-center text-gray-400 mb-2">288 Goals ◆ 126 Assists</p>
                                 <div class="flex justify-center mt-5">
-                                    <button
+                                    <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
@@ -164,7 +164,7 @@
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Erling Haaland</h3>
                                 <p class="text-center text-gray-400 mb-2">225 Goals ◆ 51 Assists</p>
                                 <div class="flex justify-center mt-5">
-                                    <button
+                                    <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
@@ -177,7 +177,7 @@
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Vinicius Junior</h3>
                                 <p class="text-center text-gray-400 mb-2">101 Goals ◆ 81 Assists</p>
                                 <div class="flex justify-center mt-5">
-                                    <button
+                                    <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
@@ -190,7 +190,7 @@
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Jude Bellingham</h3>
                                 <p class="text-center text-gray-400 mb-2">51 Goals ◆ 40 Assists</p>
                                 <div class="flex justify-center mt-5">
-                                    <button
+                                    <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
@@ -203,7 +203,7 @@
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Phil Foden</h3>
                                 <p class="text-center text-gray-400 mb-2">108 Goals ◆ 66 Assists</p>
                                 <div class="flex justify-center mt-5">
-                                    <button
+                                    <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
@@ -216,7 +216,7 @@
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Bukayo Saka</h3>
                                 <p class="text-center text-gray-400 mb-2">80 Goals ◆ 70 Assists</p>
                                 <div class="flex justify-center mt-5">
-                                    <button
+                                    <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
@@ -229,7 +229,7 @@
                 <div class="w-1/4">
                     <div class="bg-black h-96 py-5 mb-6">
                         <h3 class="text-3xl font-medium text-center py-5 text-white mb-7">Selected-V</h3>
-                        <ol class="text-white list-inside list-decimal text-center">
+                        <ol id="selected-list" class="text-base text-white list-inside list-decimal text-center">
 
                         </ol>
                     </div>
@@ -259,8 +259,8 @@
                                 id="coach-cost">
                         </div>
                         <div class="mb-7">
-                            <button
-                                class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3" id="calculate-total-btn">Calculate
+                            <button class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3"
+                                id="calculate-total-btn">Calculate
                                 Total</button>
                         </div>
                         <div class="flex justify-between items-center text-gray-400 text-xl mb-4">
@@ -277,7 +277,6 @@
             <p class="text-white text-xl font-normal">Copyright @ 2022 All Rights Reserved</p>
         </footer>
     </main>
-    <script src="js/tailwind.config.js"></script>
     <script src="js/best.js"></script>
     <script src="js/budget.js"></script>
 </body>
