--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
             font-style: normal;
             color: #FF5E19;
             text-align: center;
-            font-size: 76px;
+
         }
 
         .site-description {
             font-family: "Manrope", sans-serif;
             font-optical-sizing: auto;
-            font-weight: 500;
+            font-weight: 400;
             color: white;
-            font-size: 16px;
             text-align: center;
 
         }
@@ -44,28 +43,30 @@
 <body>
     <header class="">
         <div class="grid grid-cols-5 bg-black">
-            <div class="">
-                <img class="" src="img/mbappe-header.png" alt="mbappe-image">
+            <div class="flex justify-between">
+                <img src="img/mbappe-header.png" alt="mbappe-image">
             </div>
             <div class="col-span-3 mx-6 flex justify-center items-center">
-                <div>
-                    <h1 class="site-title mb-7 mt-0">Select Your Best Five</h1>
-                    <p class="site-description px-14">Dive into the world of sports and construct your dream team. Our
+                <div class="">
+                    <h1 class="site-title mb-5 text-5xl md:text-5xl lg:text-6xl mt-0">Select Your Best Five</h1>
+                    <p class="site-description hidden md:block md:text-xs lg:text-lg px-14">Dive into the world of
+                        sports and
+                        construct
+                        your dream team. Our
                         platform allows you to meticulously choose the top 5 players across different eras, putting your
                         sports knowledge to the ultimate test. Compete against friends, rivals, or AI opponents to prove
-                        your team is the greatest. You'll have the tools to
-                        build a championship-caliber lineup. Are you ready to take on the challenge and claim your spot
+                        your team is the greatest. Are you ready to take on the challenge and claim your spot
                         as the ultimate sports fan?</p>
                 </div>
             </div>
-            <div class=""><img src="img/tenas.png" alt="tenas-image"></div>
+            <div class="flex justify-between"><img src="img/tenas.png" alt="tenas-image"></div>
 
         </div>
     </header>
     <main>
         <section class="players-section w-full">
-            <div class="flex w-5/6 mx-auto py-16">
-                <div class="grid grid-cols-3 gap-6 w-3/4 me-6">
+            <div class="flex w-11/12 mx-auto py-16">
+                <div class="grid lg:grid-cols-2 xl:grid-cols-3 gap-6 lg:w-8/12 xl:w-3/4 w-1/2 me-6">
                     <div class="border border-gray-500 bg-black h-96">
                         <img class="h-52 w-full" src="img/messi.jpg" alt="">
                         <div class="flex justify-center">
@@ -226,7 +227,7 @@
 
 
                 </div>
-                <div class="w-1/4">
+                <div class="lg:w-4/12 xl:w-1/4 w-1/2">
                     <div class="bg-black h-96 py-5 mb-6">
                         <h3 class="text-3xl font-medium text-center py-5 text-white mb-7">Selected-V</h3>
                         <ol id="selected-list" class="text-base text-white list-inside list-decimal text-center">
@@ -246,7 +247,7 @@
                         </div>
                         <div class="flex justify-between items-center text-xl mb-4">
                             <p class="text-gray-400">Player Expenses</p>
-                            <p class="text-white">$<span id="total-player-cost">0000</span></p>
+                            <p class="text-white">$<span id="total-player-cost">0.00</span></p>
                         </div>
                         <div class="flex  justify-between items-center mb-4">
                             <p class="text-xl text-gray-400">Manager</p>
@@ -265,7 +266,7 @@
                         </div>
                         <div class="flex justify-between items-center text-gray-400 text-xl mb-4">
                             <p class="font-semibold">Total</p>
-                            <p class="text-orange-600 font-semibold">$<span id="total-cost">0000</span></p>
+                            <p class="text-orange-600 font-semibold">$<span id="total-cost">0.00</span></p>
                         </div>
 
                     </div>
@@ -274,7 +275,7 @@
         </section>
         <hr class="border-1 border-gray-500">
         <footer class="flex justify-center items-center h-32">
-            <p class="text-white text-xl font-normal">Copyright @ 2022 All Rights Reserved</p>
+            <p class="text-white text-xl font-normal">Copyright @ 2024 All Rights Reserved</p>
         </footer>
     </main>
     <script src="js/best.js"></script>
