--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body class="min-w-[550px]">
     <header class="">
         <div class="grid grid-cols-5 bg-black">
             <div class="flex justify-between">
@@ -67,156 +67,156 @@
         <section class="players-section w-full">
             <div class="flex w-11/12 mx-auto py-16">
                 <div class="grid lg:grid-cols-2 xl:grid-cols-3 gap-6 lg:w-8/12 xl:w-3/4 w-1/2 me-6">
-                    <div class="border border-gray-500 bg-black h-96">
+                    <div class="border border-gray-500 bg-black min-h-96">
                         <img class="h-52 w-full" src="img/messi.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Lionel Messi</h3>
                                 <p class="text-center text-gray-400 mb-2">735 Goals ◆ 355 Assists</p>
-                                <div class="flex justify-center mt-5">
+                                <div class="flex justify-center my-5">
                                     <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="border border-gray-500 bg-black h-96">
+                    <div class="border border-gray-500 bg-black min-h-96">
                         <img class="h-52 w-full" src="img/ronaldo.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Cristiano Ronaldo</h3>
                                 <p class="text-center text-gray-400 mb-2">759 Goals ◆ 238 Assists</p>
-                                <div class="flex justify-center mt-5">
+                                <div class="flex justify-center my-5">
                                     <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="border border-gray-500 bg-black h-96">
+                    <div class="border border-gray-500 bg-black min-h-96">
                         <img class="h-52 w-full" src="img/Lewandowski.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Lewandowski</h3>
                                 <p class="text-center text-gray-400 mb-2">568 Goals ◆ 153 Assists</p>
-                                <div class="flex justify-center mt-5">
+                                <div class="flex justify-center my-5">
                                     <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="border border-gray-500 bg-black h-96">
+                    <div class="border border-gray-500 bg-black min-h-96">
                         <img class="h-52 w-full" src="img/KDB.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Kevin De Bruyne</h3>
                                 <p class="text-center text-gray-400 mb-2">149 Goals ◆ 254 Assists</p>
-                                <div class="flex justify-center mt-5">
+                                <div class="flex justify-center my-5">
                                     <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="border border-gray-500 bg-black h-96">
+                    <div class="border border-gray-500 bg-black min-h-96">
                         <img class="h-52 w-full" src="img/neymar.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Neymar</h3>
                                 <p class="text-center text-gray-400 mb-2">360 Goals ◆ 221 Assists</p>
-                                <div class="flex justify-center mt-5">
+                                <div class="flex justify-center my-5">
                                     <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="border border-gray-500 bg-black h-96">
+                    <div class="border border-gray-500 bg-black min-h-96">
                         <img class="h-52 w-full" src="img/kane.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Harry Kane</h3>
                                 <p class="text-center text-gray-400 mb-2">351 Goals ◆ 89 Assists</p>
-                                <div class="flex justify-center mt-5">
+                                <div class="flex justify-center my-5">
                                     <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="border border-gray-500 bg-black h-96">
+                    <div class="border border-gray-500 bg-black min-h-96">
                         <img class="h-52 w-full" src="img/mbappe.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Kylian Mbappe</h3>
                                 <p class="text-center text-gray-400 mb-2">288 Goals ◆ 126 Assists</p>
-                                <div class="flex justify-center mt-5">
+                                <div class="flex justify-center my-5">
                                     <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="border border-gray-500 bg-black h-96">
+                    <div class="border border-gray-500 bg-black min-h-96">
                         <img class="h-52 w-full" src="img/Haaland.png" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Erling Haaland</h3>
                                 <p class="text-center text-gray-400 mb-2">225 Goals ◆ 51 Assists</p>
-                                <div class="flex justify-center mt-5">
+                                <div class="flex justify-center my-5">
                                     <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="border border-gray-500 bg-black h-96">
+                    <div class="border border-gray-500 bg-black min-h-96">
                         <img class="h-52 w-full" src="img/vinicius.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Vinicius Junior</h3>
                                 <p class="text-center text-gray-400 mb-2">101 Goals ◆ 81 Assists</p>
-                                <div class="flex justify-center mt-5">
+                                <div class="flex justify-center my-5">
                                     <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="border border-gray-500 bg-black h-96">
+                    <div class="border border-gray-500 bg-black min-h-96">
                         <img class="h-52 w-full" src="img/bellingham.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Jude Bellingham</h3>
                                 <p class="text-center text-gray-400 mb-2">51 Goals ◆ 40 Assists</p>
-                                <div class="flex justify-center mt-5">
+                                <div class="flex justify-center my-5">
                                     <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="border border-gray-500 bg-black h-96">
+                    <div class="border border-gray-500 bg-black min-h-96">
                         <img class="h-52 w-full" src="img/foden.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Phil Foden</h3>
                                 <p class="text-center text-gray-400 mb-2">108 Goals ◆ 66 Assists</p>
-                                <div class="flex justify-center mt-5">
+                                <div class="flex justify-center my-5">
                                     <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="border border-gray-500 bg-black h-96">
+                    <div class="border border-gray-500 bg-black min-h-96">
                         <img class="h-52 w-full" src="img/saka.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Bukayo Saka</h3>
                                 <p class="text-center text-gray-400 mb-2">80 Goals ◆ 70 Assists</p>
-                                <div class="flex justify-center mt-5">
+                                <div class="flex justify-center my-5">
                                     <button onclick="selectPlayer()"
                                         class="w-full bg-blue-800 rounded-sm text-white font-medium text-xl px-10 py-3">SELECT</button>
                                 </div>
