--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <div class="border border-gray-500 bg-black min-h-96">
-                        <img class="h-52 w-full" src="img/Lewandowski.jpg" alt="">
+                        <img class="h-52 w-full" src="img/lewandowski.jpg" alt="">
                         <div class="flex justify-center">
                             <div class="w-5/6">
                                 <h3 class="text-2xl font-bold my-3 text-white text-center">Lewandowski</h3>
